@@ -158,6 +158,7 @@
 #include <spot/twaalgos/relabel.hh>
 #include <spot/twaalgos/word.hh>
 #include <spot/twaalgos/are_isomorphic.hh>
+#include <spot/twaalgos/rabin2parity.hh>
 
 #include <spot/parseaut/public.hh>
 
@@ -590,6 +591,7 @@ def state_is_accepting(self, src) -> "bool":
 %include <spot/twaalgos/word.hh>
 %template(list_bdd) std::list<bdd>;
 %include <spot/twaalgos/are_isomorphic.hh>
+%include <spot/twaalgos/rabin2parity.hh>
 
 %pythonprepend spot::twa::dtwa_complement %{
   from warnings import warn
