@@ -1,0 +1,33 @@
+// -*- coding: utf-8 -*-
+// Copyright (C) 2017 Laboratoire de Recherche et Développement de l'Epita.
+//
+// This file is part of Spot, a model checking library.
+//
+// Spot is free software; you can redistribute it and/or modify it
+// under the terms of the GNU General Public License as published by
+// the Free Software Foundation; either version 3 of the License, or
+// (at your option) any later version.
+//
+// Spot is distributed in the hope that it will be useful, but WITHOUT
+// ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+// or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public
+// License for more details.
+//
+// You should have received a copy of the GNU General Public License
+// along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+#pragma once
+
+#include <spot/twa/twagraph.hh>
+
+namespace spot
+{
+  /// \brief Turns a DRA into a DPA
+  ///
+  /// cf. https://arxiv.org/pdf/1701.05738.pdf
+  /// For an input automaton with n states and k Rabin pairs, the output DPA has
+  /// at most n(k!) states and 2k+1 priorities.
+  SPOT_API
+  twa_graph_ptr
+  rabin_to_parity(const const_twa_graph_ptr& aut);
+}
