@@ -1,0 +1,49 @@
+#!/bin/sh
+# -*- coding: utf-8 -*-
+# Copyright (C) 2017 Laboratoire de Recherche et
+# Développement de l'Epita (LRDE).
+#
+# This file is part of Spot, a model checking library.
+#
+# Spot is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# Spot is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+# or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public
+# License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+. ./defs
+set -e
+
+(
+cat <<EOF
+HOA: v1
+name: "FXGa"
+properties: deterministic
+properties: complete
+States: 2
+Start: 0
+acc-name: Rabin 1
+Acceptance: 2 Fin(0)&Inf(1)
+AP: 1 "a"
+--BODY--
+State: 0
+[t] 1 {0 1 }
+State: 1
+[0] 1 {1 }
+[!0] 1 {0 1 }
+--END--
+EOF
+# random automata
+randaut 5 -n100 -u -D --acceptance="Rabin 0..6"
+) | \
+autcross \
+  "autfilt --parity" \
+  "autfilt"
+
