@@ -1,11 +1,21 @@
 New in spot 2.4.0.dev (not yet released)
 
+  Tools:
+
+  - autfilt learned --parity to transform deterministic Rabin automata
+    to (max odd) parity automata.
+
   Library:
 
   - The new function remove_alternation_buchi() transforms any alternating TGBA
     to an equivalent existential TGBA (with the same acceptance condition). The
     underlying algorithm is an adaptation of the breakpoint algorithm to
     Generalized Büchi conditions.
+
+  - The new function spot::rabin_to_parity() is able to translate a
+    deterministic Rabin-like automaton to an equivalent parity (max
+    odd) automaton. The number of priorities is twice the number of
+    Rabin pairs.
 
 New in spot 2.4 (2017-09-06)
 
